--- a/oehealth_idn/views/account_invoice_view.xml
+++ b/oehealth_idn/views/account_invoice_view.xml
@@ -8,11 +8,27 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="account.invoice_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//header/button[@name='action_invoice_draft']" position="after">
+                <button name="generate_insurance_report_file"  string="Generate Insurance Document" type="object" groups="account.group_account_invoice"/>
+                <button name="sync_to_owlexa"  string="Sync To Owlexa" type="object" groups="account.group_account_invoice"/>
+                <button name="upload_document_to_owlexa"  string="Upload Document To Owlexa" type="object" groups="account.group_account_invoice"/>
+                <button name="check_document_status"  string="Check Document Status" type="object" groups="account.group_account_invoice"/>
+
+            </xpath>
             <xpath expr="//page[@name='other_info']/group/group[2]/field[@name='name']" position="after">
                 <field name="arrival_id" readonly="1"/>
                 <field name="reg_id" readonly="1"/>
-                <field name="insurance_type_id"/>
             </xpath>
+
+            <xpath expr="//page[@name='other_info']/group/group[2]" position="after">
+                <group>
+                    <field name="insurance_type_id" readonly="1"/>
+                    <field name="claim_number" readonly="1"/>
+                    <field name="invoice_pdf_file" readonly="1"/>
+                    <field name="is_sync" readonly="1"/>
+                </group>
+            </xpath>
+            
             <xpath expr="//page/field[@name='invoice_line_ids']/tree/field[@name='name']" position="after">
                 <field name="patient_id" readonly="1"/>
                 <field name="reg_id" readonly="1"/>
