--- a/oehealth_idn/report/pengkajian_rawat_jalan_report.xml
+++ b/oehealth_idn/report/pengkajian_rawat_jalan_report.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="report_pengkajian_rawat_jalan">
+        <div class="header">
+            <div class="container" style="border-bottom: 1px solid black;">
+                <table style="width:100%">
+                    <tr>
+                        <td style="text-align:center; padding:8px; width:15%;">
+                                                
+                            <!-- Multicompany -->
+                            <t t-if="not o and doc">
+                                <t t-set="o" t-value="doc"/>
+                            </t>
+                            <t t-if="o and 'company_id' in o">
+                                <t t-set="company" t-value="o.company_id"/>
+                            </t>
+                            <t t-if="not o or not 'company_id' in o">
+                                <t t-set="company" t-value="res_company"/>
+                            </t>
+                            <br/>
+                            <img style="width:50px;height:50px;" t-if="company.logo" t-att-src="'data:image/png;base64,%s' %company.logo"/>
+                            
+                        </td>
+                        <td style="text-align:bottom; padding:8px;">
+                            
+                            <t t-foreach="docs" t-as="o">
+                                <h4><span t-field="o.reg_id.unit.operating_id.name"/></h4>
+                                <h5><span t-field="o.reg_id.unit.operating_id.unit_address"/></h5>
+                            </t>
+                            
+                        </td>
+                    </tr>
+                </table>  
+            </div>
+        </div>
         <t t-call="report.html_container">
                 <t t-foreach="docs" t-as="o">
                     <div class="page">
@@ -583,16 +615,17 @@
                                     <td style="text-align: Left;">
                                         Tanggal Pemeriksaan
                                         <br />
+                                        Kijang,<span t-field="o.evaluation_start_date" t-field-options='{"format": "d MMMM y"}' />
                                         <br />
                                         <br />
-                                        Keterangan
+                                        
                                     </td>
                                     <td style="text-align: center;">
                                         Pemeriksa
                                         <br />
                                         <br />
                                         <br />
-                                        __________________
+                                        ( <span t-field="o.doctor.name" /> )
                                     </td>
 
                                 </tr>
