--- a/oehealth_idn/report/report_menu.xml
+++ b/oehealth_idn/report/report_menu.xml
@@ -100,18 +100,18 @@
     <!-- Set Paper Format for the Patient Card Report -->
     <record id="radiologi_paperformat" model="report.paperformat">
         <field name="name">Radiologi Format</field>
-        <field name="default" eval="True" />
-        <field name="format">A5</field>
-        <field name="page_height">0</field>
-        <field name="page_width">0</field>
+        <field name="default" eval="True"/>
+        <field name="format">custom</field>
+        <field name="page_height">210</field>
+        <field name="page_width">148</field>
         <field name="orientation">Portrait</field>
-        <field name="margin_top">0</field>
-        <field name="margin_bottom">0</field>
-        <field name="margin_left">0</field>
-        <field name="margin_right">0</field>
+        <field name="margin_top">3</field>
+        <field name="margin_bottom">3</field>
+        <field name="margin_left">3</field>
+        <field name="margin_right">3</field>
         <field name="header_line" eval="False" />
-        <field name="header_spacing">0</field>
-        <field name="dpi">90</field>
+        <field name="header_spacing">3</field>
+        <field name="dpi">130</field>
         <field name="report_ids" eval="[(4, ref('oehealth_idn.rujukan_radiologi_report_menu'))]" />
     </record>
 
