--- a/oehealth_idn/report/rujukan_poli_gigi_report.xml
+++ b/oehealth_idn/report/rujukan_poli_gigi_report.xml
@@ -196,22 +196,24 @@
             <p>Selanjudnya pasien dalam perawatan kami. Atas bantuan dan kerjasamanya diucapkan banyak terima kasih.</p>
             <br />
             <br />
-            <table style="width:50%">
-              <tr>
-                <td style="text-align:center;">Hormat kami,</td>
-              </tr>
-              <tr>
-                <td>
-                  <br />
-                  <br />
-                  <br />
-                  <br />
-                </td>
-              </tr>
-              <tr>
-                <td style="text-align:center;">( <span t-field="o.doctor" /> )</td>
-              </tr>
-            </table>
+            <div style="margin-left: 80%;">
+              <table>
+                <tr>
+                  <td style="text-align:center;">Hormat kami,</td>
+                </tr>
+                <tr>
+                  <td>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                  </td>
+                </tr>
+                <tr>
+                  <td style="text-align:center;">( <span t-field="o.doctor" /> )</td>
+                </tr>
+              </table>
+            </div>
           </div>
         </div>
       </t>
