--- a/oehealth_idn/report/catatan_asuhan_gizi_report.xml
+++ b/oehealth_idn/report/catatan_asuhan_gizi_report.xml
@@ -118,7 +118,7 @@
                                     <table style="width:100%">
                                         <tr>
                                             <td>
-                                                Riwayat medis / kesehatan pasien / keluarga :
+                                                 medis / kesehatan pasien / keluarga :
                                                 <br />
                                                 <br />
                                                 Diagnosa Dokter :
